Remove unused db file Change placeholder template to be less dumb

--- a/templates/noRoute.html
+++ b/templates/noRoute.html
@@ -1,3 +1,4 @@
 <html>
-    <p>poopy fart!</p>
+    <title>Placeholder!</title>
+    <p>How the HECK do I get this to send a query to the backend</p>
 </html>
